# telegrambot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
telegrambot/: __init__.py  bots.py  configs.py  handlerFuncs.py
